// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Table Mode Facet Test With Adaptive Layout should get correct col layout col hierarchy coordinate with adaptive layout 1`] = `
Array [
  Object {
    "height": 30,
    "width": 119,
    "x": 0,
    "y": 0,
  },
  Object {
    "height": 30,
    "width": 119,
    "x": 119,
    "y": 0,
  },
  Object {
    "height": 30,
    "width": 119,
    "x": 238,
    "y": 0,
  },
  Object {
    "height": 30,
    "width": 119,
    "x": 357,
    "y": 0,
  },
  Object {
    "height": 30,
    "width": 119,
    "x": 476,
    "y": 0,
  },
]
`;

exports[`Table Mode Facet Test With Adaptive Layout should get correct col layout with seriesNumber col hierarchy coordinate with adaptive layout with seriesNumber 1`] = `
Array [
  Object {
    "height": 30,
    "width": 103,
    "x": 80,
    "y": 0,
  },
  Object {
    "height": 30,
    "width": 103,
    "x": 183,
    "y": 0,
  },
  Object {
    "height": 30,
    "width": 103,
    "x": 286,
    "y": 0,
  },
  Object {
    "height": 30,
    "width": 103,
    "x": 389,
    "y": 0,
  },
  Object {
    "height": 30,
    "width": 103,
    "x": 492,
    "y": 0,
  },
]
`;

exports[`Table Mode Facet Test With Custom Row Height should get correct rowOffsets when custom row height is set 1`] = `
Array [
  0,
  30,
  60,
  360,
  560,
  590,
  620,
  650,
  680,
  710,
  740,
  800,
  830,
  860,
  890,
  920,
  940,
  970,
  1000,
  1030,
  1060,
  1090,
  1120,
  1150,
  1180,
  1210,
  1240,
  1270,
  1300,
  1330,
  1360,
  1390,
  1420,
]
`;

exports[`Table Mode Facet With Column Grouping Frozen Test should get correct frozen group positions 1`] = `
Object {
  "frozenCol": Object {
    "range": Array [
      0,
      0,
    ],
    "width": 199,
    "x": 0,
  },
  "frozenRow": Object {
    "height": 60,
    "range": Array [
      0,
      1,
    ],
    "y": 0,
  },
  "frozenTrailingCol": Object {
    "range": Array [
      2,
      2,
    ],
    "width": 199,
    "x": 398,
  },
  "frozenTrailingRow": Object {
    "height": 60,
    "range": Array [
      30,
      31,
    ],
    "y": 900,
  },
}
`;

exports[`Table Mode Facet With Column Grouping Frozen Test should get correct indexes with row height gt canvas height 1`] = `
Object {
  "center": Array [
    1,
    1,
    2,
    0,
  ],
  "frozenCol": Array [
    0,
    0,
    2,
    0,
  ],
  "frozenRow": Array [
    1,
    1,
    0,
    1,
  ],
  "frozenTrailingCol": Array [
    2,
    2,
    2,
    0,
  ],
  "frozenTrailingRow": Array [
    1,
    1,
    30,
    31,
  ],
}
`;

exports[`Table Mode Facet With Frozen Test should get correct frozen group positions 1`] = `
Object {
  "frozenCol": Object {
    "range": Array [
      0,
      1,
    ],
    "width": 238,
    "x": 0,
  },
  "frozenRow": Object {
    "height": 60,
    "range": Array [
      0,
      1,
    ],
    "y": 0,
  },
  "frozenTrailingCol": Object {
    "range": Array [
      3,
      4,
    ],
    "width": 238,
    "x": 357,
  },
  "frozenTrailingRow": Object {
    "height": 60,
    "range": Array [
      30,
      31,
    ],
    "y": 900,
  },
}
`;
